--- a/Administrador.html
+++ b/Administrador.html
@@ -69,10 +69,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="bi bi-door"></i> Cerrar sesión
-                        </a>
+                        <form action="index.html" method="post">
+                            <button type="submit" class="btn btn-light nav-link">
+                                <i class="bi bi-door-closed"></i> Cerrar sesión
+                            </button>
+                        </form>
                     </li>
+                    
                 </ul>
             </nav>
         </header>
