--- a/SuperAdmin.html
+++ b/SuperAdmin.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Bufete de Abogados Valbuena - Administrador</title>
+        <title>Bufete de Abogados Valbuena - SuperAdmin</title>
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
