--- a/SuperAdmin.html
+++ b/SuperAdmin.html
@@ -69,12 +69,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <form action="index.html" method="post">
+                        <form action="logout.php" method="post">
                             <button type="submit" class="btn btn-light nav-link">
                                 <i class="bi bi-door-closed"></i> Cerrar sesión
                             </button>
                         </form>
-                    </li>
+                    </li>                    
                 </ul>
             </nav>
         </header>
