--- a/Administrador.html
+++ b/Administrador.html
@@ -2,83 +2,74 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Bufete de Abogados Valbuena - Administrador</title>
+        <title>Bufete de Abogados Valbuena - SuperAdmin</title>
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.css" rel="stylesheet">
         <style>
-            /* Imagen de fondo en movimiento */
             body {
                 background: url('Images/fondo.jpg') no-repeat center center fixed;
                 background-size: cover;
                 animation: movimientoFondo 10s infinite linear;
             }
 
-            /* Ajuste del cuadro de bienvenida */
             .alert {
-                margin-top: 20px; /* Espacio para separarlo del header */
+                margin-top: 20px;
             }
 
-            /* Personalización del cuadro informativo */
             .alert {
                 max-width: 800px;
-                background-color: rgba(255, 255, 255, 0.9); /* Fondo semi-transparente para mejor legibilidad */
+                background-color: rgba(255, 255, 255, 0.9);
             }
         </style>
     </head>
     <body>
         <header class="bg-dark text-white text-center py-3">
-            <h1 style="margin-bottom: 2rem;">Bienvenido ADMIN</h1>
+            <h1 style="margin-bottom: 2rem;">Bienvenido</h1>
             <nav>
                 <ul class="nav nav-pills nav-fill justify-content-center">
-                    <!-- Inicio -->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Administrador.html">
+                        <a class="nav-link active" aria-current="page" href="SuperAdmin.html">
                             <i class="bi bi-house"></i> Inicio
                         </a>
                     </li>
-                    <!-- Creación y asignación de casos -->
                     <li class="nav-item">
                         <a class="nav-link" href="creaCa.html">
                             <i class="bi bi-folder-plus"></i> Creación y asignación de casos
                         </a>
                     </li>
-                    <!-- Seguimiento de casos -->
                     <li class="nav-item">
                         <a class="nav-link" href="seguimiento.html">
                             <i class="bi bi-binoculars"></i> Seguimiento de casos
                         </a>
                     </li>
-                    <!-- Registro de usuarios -->
                     <li class="nav-item">
                         <a class="nav-link" href="regiUser.html">
                             <i class="bi bi-person-plus"></i> Registro de usuarios
                         </a>
                     </li>
-                    <!-- Gestión de documentos -->
                     <li class="nav-item">
                         <a class="nav-link" href="gesArchi.html">
                             <i class="bi bi-file-earmark-text"></i> Gestión de documentos
                         </a>
                     </li>
-                    <!-- Módulo de capacitación -->
                     <li class="nav-item">
                         <a class="nav-link" href="mCap.html">
                             <i class="bi bi-book"></i> Módulo de capacitación
                         </a>
                     </li>
                     <li class="nav-item">
-                        <form action="index.html" method="post">
+                        <form action="logout.php" method="post">
                             <button type="submit" class="btn btn-light nav-link">
                                 <i class="bi bi-door-closed"></i> Cerrar sesión
                             </button>
                         </form>
-                    </li>
+                    </li>                    
                 </ul>
             </nav>
         </header>
-
+        
         <!-- Cuadro informativo -->
         <div class="alert alert-primary shadow-lg rounded p-4 mx-auto mt-4" style="max-width: 800px;">
             <h4 class="alert-heading text-center">Bienvenido, usuario administrador</h4>
