--- a/gesArchi.html
+++ b/gesArchi.html
@@ -14,23 +14,28 @@
             <nav>
                 <ul class="nav nav-pills nav-fill justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="Administrador.html">
+                        <a class="nav-link" href="SuperAdmin.html">
                             <i class="bi bi-house"></i> Inicio
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="creaCa.html">
+                        <a class="nav-link" href="creaCa.php">
                             <i class="bi bi-folder-plus"></i> Creación y asignación de casos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="seguimiento.html">
+                        <a class="nav-link" href="seguimiento.php">
                             <i class="bi bi-binoculars"></i> Seguimiento de casos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="regiUserhtmlp">
+                        <a class="nav-link" href="regiUser.html">
                             <i class="bi bi-person-plus"></i> Registro de usuarios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ListaUsuarios.php">
+                        <i class="bi bi-person-plus"></i> Editar usuarios
                         </a>
                     </li>
                     <li class="nav-item">
@@ -44,9 +49,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="bi bi-door"></i> Cerrar sesión
-                        </a>
+                        <form action="logout.php" method="post">
+                            <button type="submit" class="btn btn-light nav-link">
+                                <i class="bi bi-door-closed"></i> Cerrar sesión
+                            </button>
+                        </form>
                     </li>
                 </ul>
             </nav>
