--- a/mCap.html
+++ b/mCap.html
@@ -10,27 +10,32 @@
     </head>
     <body>
         <header class="bg-dark text-white text-center py-3">
-            <h1 style="margin-bottom: 2rem;">Bienvenido ADMIN</h1>
+            <h1 style="margin-bottom: 2rem;">Bienvenido</h1>
             <nav>
                 <ul class="nav nav-pills nav-fill justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="Administrador.html">
+                        <a class="nav-link" href="SuperAdmin.html">
                             <i class="bi bi-house"></i> Inicio
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="creaCa.html">
+                        <a class="nav-link" href="creaCa.php">
                             <i class="bi bi-folder-plus"></i> Creación y asignación de casos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="seguimiento.html">
+                        <a class="nav-link" href="seguimiento.php">
                             <i class="bi bi-binoculars"></i> Seguimiento de casos
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="regiUser.html">
                             <i class="bi bi-person-plus"></i> Registro de usuarios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ListaUsuarios.php">
+                        <i class="bi bi-person-plus"></i> Editar usuarios
                         </a>
                     </li>
                     <li class="nav-item">
@@ -44,10 +49,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="bi bi-door"></i> Cerrar sesión
-                        </a>
-                    </li>
+                        <form action="logout.php" method="post">
+                            <button type="submit" class="btn btn-light nav-link">
+                                <i class="bi bi-door-closed"></i> Cerrar sesión
+                            </button>
+                        </form>
+                    </li>  
                 </ul>
             </nav>
         </header>
