--- a/regiUser.html
+++ b/regiUser.html
@@ -1,68 +1,128 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Bufete de Abogados Valbuena - Administrador</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    </head>
-    <body>
-        <header class="bg-dark text-white text-center py-3">
-            <h1 style="margin-bottom: 2rem;">Bienvenido ADMIN</h1>
-            <nav>
-                <ul class="nav nav-pills nav-fill justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="Administrador.html">
-                            <i class="bi bi-house"></i> Inicio
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="creaCa.html">
-                            <i class="bi bi-folder-plus"></i> Creación y asignación de casos
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="seguimiento.html">
-                            <i class="bi bi-binoculars"></i> Seguimiento de casos
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="regiUser.html">
-                            <i class="bi bi-person-plus"></i> Registro de usuarios
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gesArchi.html">
-                            <i class="bi bi-file-earmark-text"></i> Gestión de documentos
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mCap.html">
-                            <i class="bi bi-book"></i> Módulo de capacitación
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="bi bi-door"></i> Cerrar sesión
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
 
-        <!-- Sección de imagen centrada -->
-        <section class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-            <div class="text-center">
-                <img src="Images/Construc.jpeg" class="img-fluid" alt="En construcción">
-                <h2 class="mt-4">Esta sección está en construcción</h2>
-                <p class="lead">Vuelve pronto para ver las nuevas actualizaciones.</p>
+<head>
+    <meta charset="UTF-8">
+    <title>Bufete de Abogados Valbuena - Administrador</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+</head>
+
+<body>
+    <header class="bg-dark text-white text-center py-3">
+        <h1 style="margin-bottom: 2rem;">Bienvenido</h1>
+        <nav>
+            <ul class="nav nav-pills nav-fill justify-content-center">
+                <li class="nav-item"><a class="nav-link" href="SuperAdmin.html"><i class="bi bi-house"></i> Inicio</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="creaCa.php"><i class="bi bi-folder-plus"></i> Creación y
+                        asignación de casos</a></li>
+                <li class="nav-item"><a class="nav-link" href="seguimiento.php"><i class="bi bi-binoculars"></i>
+                        Seguimiento de casos</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="regiUser.html"><i
+                            class="bi bi-person-plus"></i> Registro de usuarios</a></li>
+                <li class="nav-item"><a class="nav-link" href="ListaUsuarios.php"><i class="bi bi-person-plus"></i>
+                        Editar usuarios</a></li>
+                <li class="nav-item"><a class="nav-link" href="gesArchi.html"><i class="bi bi-file-earmark-text"></i>
+                        Gestión de documentos</a></li>
+                <li class="nav-item"><a class="nav-link" href="mCap.html"><i class="bi bi-book"></i> Módulo de
+                        capacitación</a></li>
+                <li class="nav-item">
+                    <form action="logout.php" method="post">
+                        <button type="submit" class="btn btn-light nav-link"><i class="bi bi-door-closed"></i> Cerrar
+                            sesión</button>
+                    </form>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h2>Registrar un Nuevo Usuario</h2>
+                <form id="registroForm">
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" name="nombre" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="apellido" class="form-label">Apellido</label>
+                        <input type="text" class="form-control" id="apellido" name="apellido" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="NUIP" class="form-label">NUIP</label>
+                        <input type="text" class="form-control" id="NUIP" name="NUIP" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="telefono" class="form-label">Teléfono</label>
+                        <input type="text" class="form-control" id="telefono" name="telefono">
+                    </div>
+                    <div class="mb-3">
+                        <label for="direccion" class="form-label">Dirección</label>
+                        <input type="text" class="form-control" id="direccion" name="direccion">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="contrasena" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="contrasena" name="contrasena" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="rol" class="form-label">Rol</label>
+                        <select class="form-control" id="rol" name="rol" required>
+                            <option value="SuperAdmin">SuperAdmin</option>
+                            <option value="Admin">Admin</option>
+                            <option value="Abogado">Abogado</option>
+                            <option value="Secretario">Secretario</option>
+                            <option value="Usuario">Usuario</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="numero_licencia" class="form-label">Número de Licencia</label>
+                        <input type="text" class="form-control" id="numero_licencia" name="numero_licencia">
+                    </div>
+                    <div class="mb-3">
+                        <label for="especialidad" class="form-label">Especialidad</label>
+                        <input type="text" class="form-control" id="especialidad" name="especialidad">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Registrar</button>
+                </form>
             </div>
-        </section>
+        </div>
+    </div>
 
-        <footer class="bg-dark text-white text-center py-3">
-            <p>Valbuena abogados &copy; 2024</p>
-        </footer>
-    </body>
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <p>Valbuena abogados &copy; 2024</p>
+    </footer>
+
+    <script>
+        document.getElementById('registroForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Evita el envío tradicional del formulario
+            const formData = new FormData(this);
+
+            fetch('php/registrar_usuario.php', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert("Usuario registrado exitosamente");
+                        document.getElementById('registroForm').reset(); // Limpia el formulario
+                    } else {
+                        alert("Error al registrar usuario: " + data.error);
+                    }
+                })
+                .catch(error => {
+                    console.error("Error al registrar usuario:", error);
+                    alert("Ocurrió un error al registrar el usuario.");
+                });
+        });
+    </script>
+</body>
+
 </html>
