--- a/gesArchi.html
+++ b/gesArchi.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header class="bg-dark text-white text-center py-3">
-            <h1 style="margin-bottom: 2rem;">Bienvenido ADMIN</h1>
+            <h1 style="margin-bottom: 2rem;">Bienvenido</h1>
             <nav>
                 <ul class="nav nav-pills nav-fill justify-content-center">
                     <li class="nav-item">
@@ -36,11 +36,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ListaUsuarios.php">
                         <i class="bi bi-person-plus"></i> Editar usuarios
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="gesArchi.html">
-                            <i class="bi bi-file-earmark-text"></i> Gestión de documentos
                         </a>
                     </li>
                     <li class="nav-item">
